<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".MainActivity"
	style="@android:style/Theme.Material"
	android:id="@+id/mainLayout">

	<TextView
		android:text="@string/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textView"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_regal_text"
		android:id="@+id/buttonRegal"
		android:layout_below="@+id/seekBarBlue"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="33dp"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_tisch_text"
		android:id="@+id/buttonTisch"
		android:layout_below="@+id/buttonRegal"
		android:layout_centerHorizontal="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_bett_text"
		android:id="@+id/buttonBett"
		android:layout_below="@+id/buttonTisch"
		android:layout_centerHorizontal="true"/>

	<SeekBar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/seekBarRed"
		android:max="1023"
		android:indeterminate="false"
		android:layout_below="@+id/textView"
		android:layout_alignParentEnd="true"/>

	<SeekBar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/seekBarGreen"
		android:layout_below="@+id/seekBarRed"
		android:layout_centerHorizontal="true"
		android:max="1023"
		android:indeterminate="false"/>

	<SeekBar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/seekBarBlue"
		android:layout_below="@+id/seekBarGreen"
		android:layout_centerHorizontal="true"
		android:max="1023"
		android:indeterminate="false"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_alle_text"
		android:id="@+id/buttonAlle"
		android:layout_below="@+id/buttonBett"
		android:layout_centerHorizontal="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_sunrise_text"
		android:id="@+id/buttonSunrise"
		android:layout_below="@+id/buttonAlleAus"
		android:layout_centerHorizontal="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_alleaus_text"
		android:id="@+id/buttonAlleAus"
		android:layout_below="@+id/buttonDeckenlicht"
		android:layout_alignStart="@+id/buttonAlle"
		android:layout_marginTop="24dp"/>

	<ToggleButton
		android:id="@+id/buttonDeckenlicht"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/buttonAlle"
		android:layout_centerHorizontal="true"
		android:text="@string/button_deckenlicht_text"
		android:textOff="Aus"
		android:textOn="An" />

</RelativeLayout>

